syntax = "proto3";

package com.road.yishi.proto.mall;

message ShopFreshReqMsg {
  bool isButton = 1;
  int32 payType = 2;
}
